--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/prefixed/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Accueil - ohmyfood</title>
 </head>
 
 <body>
     <div class="container">
         <header class="header">
-            <h1 class="header__title">ohmyfoot</h1>
+            <h1 class="header__title">ohmyfood</h1>
         </header>
 
         <section class="menu">
