--- a/pages/menu4.html
+++ b/pages/menu4.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="header__title"><a href="../index.html">ohmyfoot</a></h1>
+        <h1 class="header__title"><a href="../index.html">ohmyfood</a></h1>
     </header>
 
     <section class="menu-page menu-page__gout">
