--- a/pages/menu2.html
+++ b/pages/menu2.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <h1 class="header__title"><a href="../index.html">ohmyfoot</a></h1>
+            <h1 class="header__title"><a href="../index.html">ohmyfood</a></h1>
         </header>
 
         <section class="menu-page menu-page__francaise">
