footer, menu content, responsive update

--- a/pages/menu1.html
+++ b/pages/menu1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <title>La note enchantée</title>
+    <title>ohmyfood - La note enchantée</title>
 </head>
 <body>
     <header class="header">
@@ -18,42 +18,44 @@
             La note enchantée
         </header>
 
-        <section class="entree">
+        <section class="entree entree--ench">
             <div class="entree__header">
                 <img class="separator--left" src="../img/ench-left.png" alt=""><h2> Prélude<span></span></h2><img src="../img/ench-right.png" alt="">
             </div>
-            <p>__ <span>_€</span></p>
-            <p>__<span>_€</span></p>
-            <p>__ <span>_€</span></p>
+            <p>Ravioles de foie gras accompagnés de leur crème à la truffe <span>98€</span></p>
+            <p>Caviar osciètre sur blini à la farine de blé noir<span>115€</span></p>
+            <p>Homard et espuma de potiron mariné aux zests d'orange<span>89€</span></p>
+            <p>Foie gras de canard cuit entier, confiture de figue et pain toasté<span>105€</span></p>
         </section>
 
-        <section class="plat">
+        <section class="plat plat--ench">
             <div class="plat__header">
                 <img class="separator--left" src="../img/ench-left.png" alt=""><h2> Point d'orgue<span></span></h2><img src="../img/ench-right.png" alt="">
             </div>
-            <p>__ <span>_€</span></p>
-            <p>__ <span>_€</span></p>
-            <p>__ <span>_€</span></p>
+            <p>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave<span>102€</span></p>
+            <p>Langoustine poêlée, purée de patate douce<span>205€</span></p>
+            <p>Mijoté de queue de boeuf et riz sauvage aux zests de citron<span>169€</span></p>
         </section>
 
-        <section class="dessert">
+        <section class="dessert dessert--ench">
             <div class="dessert__header">
                 <img class="separator--left" src="../img/ench-left.png" alt=""><h2> Mouvement final<span></span></h2><img src="../img/ench-right.png" alt="">
             </div>
-            <p>__</p>
-            <p>__</p>
-            <p>__</p>
+            <p>Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
+            <p>Baba au rhum revisité avec son coulis de citron</p>
+            <p>Tarte au citron meringuée destructurée</p>
         </section>
 
         <footer class="menu__enchantee--name">
-            <img src="../img/music-logo.png" alt=""> La note enchantée
+            <img src="../img/music-logo.png" alt=""> 
+            La note enchantée
         </foooter>
 
     </section>
 
     <footer class="footer">
-        <span class="footer__mentions"><a href="">Mentions légales</a></span>
-        <span class="footer__contact"><a href="">Contactez-nous</a></span>
+        <span class="footer__mentions"><a href="./mentions-legales.html" target="_blank">Mentions légales</a></span>
+        <span class="footer__contact"><a href="mailto: contact@ohmyfood.com">Contactez-nous</a></span>
     </footer>
 </body>
 </html>
