--- a/pages/menu3.html
+++ b/pages/menu3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Le délice des papilles</title>
+    <title>ohmyfood - Le délice des papilles</title>
 </head>
 <body>
     <header class="header">
@@ -21,34 +21,34 @@
             <div class="entree__header">
                 <img class="separator--left" src="../img/papilles-bar-1.png" alt=""><h2> Prélude<span></span></h2><img src="../img/papilles-bar-1.png" alt="">
             </div>
-            <p>__ <span>_€</span></p>
-            <p>__<span>_€</span></p>
-            <p>__ <span>_€</span></p>
+            <p>Tartare de thon assaisonnée au yuzu<span>55€</span></p>
+            <p>Bouchée de homard croustillant et sa farandole de petits légumes<span>89€</span></p>
+            <p>Velouté de cèpes aux truffes<span>56€</span></p>
         </section>
 
         <section class="plat">
             <div class="plat__header">
                 <img class="separator--left" src="../img/papilles-bar-2.png" alt=""><h2> Point d'orgue<span></span></h2><img src="../img/papilles-bar-2.png" alt="">
             </div>
-            <p>__ <span>_€</span></p>
-            <p>__ <span>_€</span></p>
-            <p>__ <span>_€</span></p>
+            <p>Poulet rôti aux herbes de provence et sa crème de truffe<span>110€</span></p>
+            <p>Langouste rôtie et ses légumes de saison<span>225€</span></p>
+            <p>Côte de boeuf angus et sa purée de panais<span>115€</span></p>
         </section>
 
         <section class="dessert">
             <div class="dessert__header">
                 <img class="separator--left" src="../img/papilles-bar-3.png" alt=""><h2> Mouvement final<span></span></h2><img src="../img/papilles-bar-3.png" alt="">
             </div>
-            <p>__</p>
-            <p>__</p>
-            <p>__</p>
+            <p>Farandole de desserts du chef<span>55€</span></p>
+            <p>Crème brulée revisitée<span>60€</span></p>
+            <p>Tiramisu à la noisette<span>55€</span></p>
         </section>
 
     </section>
 
     <footer class="footer">
-        <span class="footer__mentions"><a href="">Mentions légales</a></span>
-        <span class="footer__contact"><a href="">Contactez-nous</a></span>
+        <span class="footer__mentions"><a href="./mentions-legales.html" target="_blank">Mentions légales</a></span>
+        <span class="footer__contact"><a href="mailto: contact@ohmyfood.com">Contactez-nous</a></span>
     </footer>
 </body>
 </html>
