--- a/pages/menu4.html
+++ b/pages/menu4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <title>La palette du goût</title>
+    <title>ohmyfood - La palette du goût</title>
 </head>
 <body>
     <header class="header">
@@ -21,34 +21,34 @@
             <div class="entree__header">
                 <img class="separator--left" src="../img/gout-bar.png" alt=""><h2> Esquisse<span></span></h2><img src="../img/gout-bar.png" alt="">
             </div>
-            <p>__ <span>_€</span></p>
-            <p>__<span>_€</span></p>
-            <p>__ <span>_€</span></p>
+            <p>Fricassée d'escargot au piment d'espelete<span>60€</span></p>
+            <p>Oeuf au plat assaisonné à la truffe sur lit de caviar<span>55€</span></p>
+            <p>Foie gras de canard mi-cuit et  ses copeaux de truffe noire<span>65€</span></p>
         </section>
 
         <section class="plat">
             <div class="plat__header">
                 <img class="separator--left" src="../img/gout-bar.png" alt=""><h2> Oeuvre de maître<span></span></h2><img src="../img/gout-bar.png" alt="">
             </div>
-            <p>__ <span>_€</span></p>
-            <p>__ <span>_€</span></p>
-            <p>__ <span>_€</span></p>
+            <p>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes<span>70€</span></p>
+            <p>Parmentier de queue de boeuf à la truffe noire sur sa purée de panais<span>85€</span></p>
+            <p>Filet de Turbot aux agrumes<span>125€</span></p>
         </section>
 
         <section class="dessert">
             <div class="dessert__header">
                 <img class="separator--left" src="../img/gout-bar.png" alt=""><h2> Au sommet de l'art<span></span></h2><img src="../img/gout-bar.png" alt="">
             </div>
-            <p>__</p>
-            <p>__</p>
-            <p>__</p>
+            <p>Paris-Brest revisité<span>55€</span></p>
+            <p>Macaron au chocolat d'exception et glace à la vanille de Madagascar<span>65€</span></p>
+            <p>Mousse au chocolat au piment d'espelette et à la truffe noire<span>60€</span></p>
         </section>
 
     </section>
 
     <footer class="footer">
-        <span class="footer__mentions"><a href="">Mentions légales</a></span>
-        <span class="footer__contact"><a href="">Contactez-nous</a></span>
+        <span class="footer__mentions"><a href="./mentions-legales.html" target="_blank">Mentions légales</a></span>
+        <span class="footer__contact"><a href="mailto: contact@ohmyfood.com">Contactez-nous</a></span>
     </footer>
     
 </body>
