--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Accueil - ohmyfood</title>
+    <title>ohmyfood - Accueil </title>
 </head>
 
 <body>
@@ -39,8 +39,8 @@
         </section>
 
         <footer class="footer">
-            <span class="footer__mentions"><a href="">Mentions légales</a></span>
-            <span class="footer__contact"><a href="">Contactez-nous</a></span>
+            <span class="footer__mentions"><a href="./pages/mentions-legales.html" target="_blank">Mentions légales</a></span>
+            <span class="footer__contact"><a href="mailto: contact@ohmyfood.com">Contactez-nous</a></span>
         </footer>
     </div>
 </body>
