--- a/pages/menu2.html
+++ b/pages/menu2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Le chic à la française</title>
+    <title>ohmyfood - Le chic à la française</title>
 </head>
 <body>
     <div class="container">
@@ -48,8 +48,8 @@
         </section>
 
         <footer class="footer">
-            <span class="footer__mentions"><a href="">Mentions légales</a></span>
-            <span class="footer__contact"><a href="">Contactez-nous</a></span>
+            <span class="footer__mentions"><a href="./mentions-legales.html" target="_blank">Mentions légales</a></span>
+            <span class="footer__contact"><a href="mailto: contact@ohmyfood.com">Contactez-nous</a></span>
         </footer>
     </div>
 </body>
