--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,40 +9,41 @@
 </head>
 
 <body>
-    <div class="container">
-        <header class="header">
-            <h1 class="header__title">ohmyfood</h1>
-        </header>
+    <header class="header">
+        <h1 class="header__title">ohmyfood</h1>
+    </header>
 
-        <section class="menu">
-            <a class="card card__enchantee" href="./pages/menu1.html">
-                <p> <img src="./img/music-logo.png" alt=""><br>
-                    <span class="menu__enchantee--name">La note enchantée</span>
-                    <span class="menu__enchantee--menu">Menu</span></p>
-            </a>
-            <a class="card card__francaise" href="./pages/menu2.html">
-                <p><span class="menu__francaise--name">Le chic à la Française </span>
-                    <span class="menu__francaise--menu">Menu</span></p>
-            </a>
-            <a class="card card__papilles" href="./pages/menu3.html">
-                <p><span class="menu__papilles--name">Le délice des papilles</span>
-                    <span class="menu__papilles--menu">Menu</span></p>
-            </a>
-            <a class="card card__gout" href="./pages/menu4.html">
-                <p><span class="menu__gout--name">La palette du goût</span>
-                    <span class="menu__gout--menu">Menu</span></p>
-            </a>
-            
-        </section>
+    <section class="menus">
+        <a class="card card__enchantee" href="./pages/la-note-enchantee.html">
+            <p> <img src="./img/music-logo.png" alt=""><br>
+                <span class="menus__enchantee--name">La note enchantée</span>
+                <span class="menus__enchantee--menu">Menu</span></p>
+        </a>
+        <a class="card card__francaise" href="./pages/le-chic-a-la-francaise.html">
+            <p><span class="menus__francaise--name">Le chic à la Française </span>
+                <span class="menus__francaise--menu">Menu</span></p>
+        </a>
+        <a class="card card__papilles" href="./pages/le-delice-des-papilles.html">
+            <p><span class="menus__papilles--name">Le délice des papilles</span>
+                <span class="menus_papilles--menu">Menu</span></p>
+        </a>
+        <a class="card card__gout" href="./pages/la-palette-du-gout.html">
+            <p><span class="menus__gout--name">La palette du goût</span>
+                <span class="menus__gout--menu">Menu</span></p>
+        </a>
 
-        <section class="soon">
-            <h2 class="soon__title">Prochainement <span class="soon__dot soon__dot--1">.</span><span class="soon__dot soon__dot--2">.</span><span class="soon__dot soon__dot--3">.</span></h2>
-        </section>
+    </section>
 
-        <footer class="footer">
-            <span class="footer__mentions"><a href="./pages/mentions-legales.html" target="_blank">Mentions légales</a></span>
-            <span class="footer__contact"><a href="mailto: contact@ohmyfood.com">Contactez-nous</a></span>
-        </footer>
-    </div>
+    <section class="soon">
+        <h2 class="soon__title">Prochainement <span class="soon__dot soon__dot--1">.</span><span
+                class="soon__dot soon__dot--2">.</span><span class="soon__dot soon__dot--3">.</span></h2>
+    </section>
+
+    <footer class="footer">
+        <span class="footer__mentions"><a href="./pages/mentions-legales.html" target="_blank">Mentions
+                légales</a></span>
+        <span class="footer__contact"><a href="mailto:contact@ohmyfood.com">Contactez-nous</a></span>
+    </footer>
 </body>
+
 </html>
