--- a/pages/la-note-enchantee.html
+++ b/pages/la-note-enchantee.html
@@ -13,7 +13,7 @@
 
     <section class="menu-page menu-page__enchantee">
 
-        <header class="menu__enchantee--name">
+        <header class="menus__enchantee--name">
             <img src="../img/music-logo.png" alt=""><br>
             La note enchantée
         </header>
@@ -46,16 +46,16 @@
             <p>Tarte au citron meringuée destructurée</p>
         </section>
 
-        <footer class="menu__enchantee--name">
+        <section class="menu-page__footer">
             <img src="../img/music-logo.png" alt=""> 
-            La note enchantée
-        </foooter>
+            <span class="menus__enchantee--name">La note enchantée</span>
+        </section>
 
     </section>
 
     <footer class="footer">
         <span class="footer__mentions"><a href="./mentions-legales.html" target="_blank">Mentions légales</a></span>
-        <span class="footer__contact"><a href="mailto: contact@ohmyfood.com">Contactez-nous</a></span>
+        <span class="footer__contact"><a href="mailto:contact@ohmyfood.com">Contactez-nous</a></span>
     </footer>
 </body>
 </html>
