--- a/pages/la-palette-du-gout.html
+++ b/pages/la-palette-du-gout.html
@@ -13,7 +13,7 @@
 
     <section class="menu-page menu-page__gout">
 
-        <header class="menu__gout--name">
+        <header class="menus__gout--name">
             La palette du goût
         </header>
 
@@ -48,7 +48,7 @@
 
     <footer class="footer">
         <span class="footer__mentions"><a href="./mentions-legales.html" target="_blank">Mentions légales</a></span>
-        <span class="footer__contact"><a href="mailto: contact@ohmyfood.com">Contactez-nous</a></span>
+        <span class="footer__contact"><a href="mailto:contact@ohmyfood.com">Contactez-nous</a></span>
     </footer>
     
 </body>
