--- a/pages/le-chic-a-la-francaise.html
+++ b/pages/le-chic-a-la-francaise.html
@@ -14,7 +14,7 @@
 
         <section class="menu-page menu-page__francaise">
 
-            <header class="menu__francaise--name">
+            <header class="menus__francaise--name">
                 Le chic à la française
             </header>
 
@@ -49,7 +49,7 @@
 
         <footer class="footer">
             <span class="footer__mentions"><a href="./mentions-legales.html" target="_blank">Mentions légales</a></span>
-            <span class="footer__contact"><a href="mailto: contact@ohmyfood.com">Contactez-nous</a></span>
+            <span class="footer__contact"><a href="mailto:contact@ohmyfood.com">Contactez-nous</a></span>
         </footer>
     </div>
 </body>
