--- a/pages/le-delice-des-papilles.html
+++ b/pages/le-delice-des-papilles.html
@@ -13,7 +13,7 @@
 
     <section class="menu-page menu-page__papilles">
 
-        <header class="menu__papilles--name">
+        <header class="menus__papilles--name">
             Le délice des papilles
         </header>
 
@@ -48,7 +48,7 @@
 
     <footer class="footer">
         <span class="footer__mentions"><a href="./mentions-legales.html" target="_blank">Mentions légales</a></span>
-        <span class="footer__contact"><a href="mailto: contact@ohmyfood.com">Contactez-nous</a></span>
+        <span class="footer__contact"><a href="mailto:contact@ohmyfood.com">Contactez-nous</a></span>
     </footer>
 </body>
 </html>
