replace des <p> par <li>

--- a/pages/la-note-enchantee.html
+++ b/pages/la-note-enchantee.html
@@ -15,35 +15,41 @@
 
         <header class="menus__enchantee--name">
             <img src="../img/music-logo.png" alt=""><br>
-            La note enchantée
+            <h2>La note enchantée</h2>
         </header>
 
         <section class="entree entree--ench">
             <div class="entree__header">
-                <img class="separator--left" src="../img/ench-left.png" alt=""><h2> Prélude<span></span></h2><img src="../img/ench-right.png" alt="">
+                <img class="separator--left" src="../img/ench-left.png" alt=""><h3>Prélude<hr></h3><img src="../img/ench-right.png" alt="">
             </div>
-            <p>Ravioles de foie gras accompagnés de leur crème à la truffe <span>98€</span></p>
-            <p>Caviar osciètre sur blini à la farine de blé noir<span>115€</span></p>
-            <p>Homard et espuma de potiron mariné aux zests d'orange<span>89€</span></p>
-            <p>Foie gras de canard cuit entier, confiture de figue et pain toasté<span>105€</span></p>
+            <ul>
+                <li>Ravioles de foie gras accompagnés de leur crème à la truffe <span>98€</span></li>
+                <li>Caviar osciètre sur blini à la farine de blé noir<span>115€</span></li>
+                <li>Homard et espuma de potiron mariné aux zests d'orange<span>89€</span></li>
+                <li>Foie gras de canard cuit entier, confiture de figue et pain toasté<span>105€</span></li>
+            </ul>
         </section>
 
         <section class="plat plat--ench">
             <div class="plat__header">
-                <img class="separator--left" src="../img/ench-left.png" alt=""><h2> Point d'orgue<span></span></h2><img src="../img/ench-right.png" alt="">
+                <img class="separator--left" src="../img/ench-left.png" alt=""><h3>Point d'orgue<hr></h3><img src="../img/ench-right.png" alt="">
             </div>
-            <p>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave<span>102€</span></p>
-            <p>Langoustine poêlée, purée de patate douce<span>205€</span></p>
-            <p>Mijoté de queue de boeuf et riz sauvage aux zests de citron<span>169€</span></p>
+            <ul>
+                <li>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave<span>102€</span></li>
+                <li>Langoustine poêlée, purée de patate douce<span>205€</span></li>
+                <li>Mijoté de queue de boeuf et riz sauvage aux zests de citron<span>169€</span></li>
+            </ul>
         </section>
 
         <section class="dessert dessert--ench">
             <div class="dessert__header">
-                <img class="separator--left" src="../img/ench-left.png" alt=""><h2> Mouvement final<span></span></h2><img src="../img/ench-right.png" alt="">
+                <img class="separator--left" src="../img/ench-left.png" alt=""><h3> Mouvement final<hr></h3><img src="../img/ench-right.png" alt="">
             </div>
-            <p>Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
-            <p>Baba au rhum revisité avec son coulis de citron</p>
-            <p>Tarte au citron meringuée destructurée</p>
+            <ul>
+                <li>Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</li>
+                <li>Baba au rhum revisité avec son coulis de citron</li>
+                <li>Tarte au citron meringuée destructurée</li>
+            </ul>
         </section>
 
         <section class="menu-page__footer">
@@ -54,8 +60,10 @@
     </section>
 
     <footer class="footer">
-        <span class="footer__mentions"><a href="./mentions-legales.html" target="_blank">Mentions légales</a></span>
-        <span class="footer__contact"><a href="mailto:contact@ohmyfood.com">Contactez-nous</a></span>
+        <ul>
+            <li class="footer__mentions"><a href="./mentions-legales.html" target="_blank">Mentions légales</a></li>
+            <li class="footer__contact"><a href="mailto:contact@ohmyfood.com">Contactez-nous</a></li>
+        </ul>
     </footer>
 </body>
 </html>
