--- a/pages/le-chic-a-la-francaise.html
+++ b/pages/le-chic-a-la-francaise.html
@@ -15,41 +15,49 @@
         <section class="menu-page menu-page__francaise">
 
             <header class="menus__francaise--name">
-                Le chic à la française
+                <h2>Le chic à la française</h2>
             </header>
 
             <section class="entree">
                 <div class="entree__header">
-                    <img class="separator--left" src="../img/arrow-1b.png" alt=""><h2> Pour se mettre en appétit<span></span></h2><img src="../img/arrow-1b.png" alt="">
+                    <img class="separator--left" src="../img/arrow-1b.png" alt=""><h3>Pour se mettre en appétit<hr></h3><img src="../img/arrow-1b.png" alt="">
                 </div>
-                <p>Tartare de poulpe acidulé aux zests d'orange <span>79€</span></p>
-                <p>Velouté de légumes d'antan <span>57€</span></p>
-                <p>Soupe à l'oignon revisitée <span>57€</span></p>
+                <ul>
+                    <li>Tartare de poulpe acidulé aux zests d'orange <span>79€</span></li>
+                    <li>Velouté de légumes d'antan <span>57€</span></li>
+                    <li>Soupe à l'oignon revisitée <span>57€</span></li>
+                </ul>
             </section>
 
             <section class="plat">
                 <div class="plat__header">
-                    <img class="separator--left" src="../img/arrow-2.png" alt=""><h2> Plaisir des papilles<span></span></h2><img src="../img/arrow-2.png" alt="">
+                    <img class="separator--left" src="../img/arrow-2.png" alt=""><h3>Plaisir des papilles<hr></h3><img src="../img/arrow-2.png" alt="">
                 </div>
-                <p>Coquilles Saint-Jacques accompagnées d'une purée de panais <span>95€</span></p>
-                <p>Magret de canard et parmentier de pommes de terres <span>88€</span></p>
-                <p>Pigeonneau d'Ille et Vilaine sur son lit de gnocchhis aux légumes <span>175€</span></p>
+                <ul>
+                    <li>Coquilles Saint-Jacques accompagnées d'une purée de panais <span>95€</span></li>
+                    <li>Magret de canard et parmentier de pommes de terres <span>88€</span></li>
+                    <li>Pigeonneau d'Ille et Vilaine sur son lit de gnocchhis aux légumes <span>175€</span></li>
+                </ul>
             </section>
 
             <section class="dessert">
                 <div class="dessert__header">
-                    <img class="separator--left" src="../img/arrow-3.png" alt=""><h2> Gourmandises sucrées<span></span></h2><img src="../img/arrow-3.png" alt="">
+                    <img class="separator--left" src="../img/arrow-3.png" alt=""><h3> Gourmandises sucrées<hr></h3><img src="../img/arrow-3.png" alt="">
                 </div>
-                <p>Pétales de violettes glacés et purée de noisettes</p>
-                <p>Fondant au chocolat revisité</p>
-                <p>Millefeuille croustillant</p>
+                <ul>
+                    <li>Pétales de violettes glacés et purée de noisettes</li>
+                    <li>Fondant au chocolat revisité</li>
+                    <li>Millefeuille croustillant</li>
+                </ul>
             </section>
 
         </section>
 
         <footer class="footer">
-            <span class="footer__mentions"><a href="./mentions-legales.html" target="_blank">Mentions légales</a></span>
-            <span class="footer__contact"><a href="mailto:contact@ohmyfood.com">Contactez-nous</a></span>
+            <ul>
+                <li class="footer__mentions"><a href="./mentions-legales.html" target="_blank">Mentions légales</a></li>
+                <li class="footer__contact"><a href="mailto:contact@ohmyfood.com">Contactez-nous</a></li>
+            </ul>
         </footer>
     </div>
 </body>
