--- a/pages/le-delice-des-papilles.html
+++ b/pages/le-delice-des-papilles.html
@@ -14,41 +14,49 @@
     <section class="menu-page menu-page__papilles">
 
         <header class="menus__papilles--name">
-            Le délice des papilles
+            <h2>Le délice des papilles</h2>
         </header>
 
         <section class="entree">
             <div class="entree__header">
-                <img class="separator--left" src="../img/papilles-bar-1.png" alt=""><h2> Prélude<span></span></h2><img src="../img/papilles-bar-1.png" alt="">
+                <img class="separator--left" src="../img/papilles-bar-1.png" alt=""><h3>Prélude<hr></h3><img src="../img/papilles-bar-1.png" alt="">
             </div>
-            <p>Tartare de thon assaisonnée au yuzu<span>55€</span></p>
-            <p>Bouchée de homard croustillant et sa farandole de petits légumes<span>89€</span></p>
-            <p>Velouté de cèpes aux truffes<span>56€</span></p>
+            <ul>
+                <li>Tartare de thon assaisonnée au yuzu<span>55€</span></li>
+                <li>Bouchée de homard croustillant et sa farandole de petits légumes<span>89€</span></li>
+                <li>Velouté de cèpes aux truffes<span>56€</span></li>
+            </ul>
         </section>
 
         <section class="plat">
             <div class="plat__header">
-                <img class="separator--left" src="../img/papilles-bar-2.png" alt=""><h2> Point d'orgue<span></span></h2><img src="../img/papilles-bar-2.png" alt="">
+                <img class="separator--left" src="../img/papilles-bar-2.png" alt=""><h3>Point d'orgue<hr></h3><img src="../img/papilles-bar-2.png" alt="">
             </div>
-            <p>Poulet rôti aux herbes de provence et sa crème de truffe<span>110€</span></p>
-            <p>Langouste rôtie et ses légumes de saison<span>225€</span></p>
-            <p>Côte de boeuf angus et sa purée de panais<span>115€</span></p>
+            <ul>
+                <li>Poulet rôti aux herbes de provence et sa crème de truffe<span>110€</span></li>
+                <li>Langouste rôtie et ses légumes de saison<span>225€</span></li>
+                <li>Côte de boeuf angus et sa purée de panais<span>115€</span></li>
+            </ul>
         </section>
 
         <section class="dessert">
             <div class="dessert__header">
-                <img class="separator--left" src="../img/papilles-bar-3.png" alt=""><h2> Mouvement final<span></span></h2><img src="../img/papilles-bar-3.png" alt="">
+                <img class="separator--left" src="../img/papilles-bar-3.png" alt=""><h3>Mouvement final<hr></h3><img src="../img/papilles-bar-3.png" alt="">
             </div>
-            <p>Farandole de desserts du chef<span>55€</span></p>
-            <p>Crème brulée revisitée<span>60€</span></p>
-            <p>Tiramisu à la noisette<span>55€</span></p>
+            <ul>
+                <li>Farandole de desserts du chef<span>55€</span></li>
+                <li>Crème brulée revisitée<span>60€</span></li>
+                <li>Tiramisu à la noisette<span>55€</span></li>
+            </ul>
         </section>
 
     </section>
 
     <footer class="footer">
-        <span class="footer__mentions"><a href="./mentions-legales.html" target="_blank">Mentions légales</a></span>
-        <span class="footer__contact"><a href="mailto:contact@ohmyfood.com">Contactez-nous</a></span>
+        <ul>
+            <li class="footer__mentions"><a href="./mentions-legales.html" target="_blank">Mentions légales</a></li>
+            <li class="footer__contact"><a href="mailto:contact@ohmyfood.com">Contactez-nous</a></li>
+        </ul>
     </footer>
 </body>
 </html>
