--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
     </section>
 
     <footer class="footer">
-        <span class="footer__mentions"><a href="./pages/mentions-legales.html" target="_blank">Mentions
-                légales</a></span>
-        <span class="footer__contact"><a href="mailto:contact@ohmyfood.com">Contactez-nous</a></span>
+        <ul>
+            <li class="footer__mentions"><a href="./pages/mentions-legales.html" target="_blank">Mentions légales</a></li>
+            <li class="footer__contact"><a href="mailto:contact@ohmyfood.com">Contactez-nous</a></li>
+        </ul>
     </footer>
 </body>
 
