--- a/pages/la-palette-du-gout.html
+++ b/pages/la-palette-du-gout.html
@@ -14,41 +14,49 @@
     <section class="menu-page menu-page__gout">
 
         <header class="menus__gout--name">
-            La palette du goût
+            <h2>La palette du goût</h2>
         </header>
 
         <section class="entree">
             <div class="entree__header">
-                <img class="separator--left" src="../img/gout-bar.png" alt=""><h2> Esquisse<span></span></h2><img src="../img/gout-bar.png" alt="">
+                <img class="separator--left" src="../img/gout-bar.png" alt=""><h3>Esquisse<hr></h3><img src="../img/gout-bar.png" alt="">
             </div>
-            <p>Fricassée d'escargot au piment d'espelete<span>60€</span></p>
-            <p>Oeuf au plat assaisonné à la truffe sur lit de caviar<span>55€</span></p>
-            <p>Foie gras de canard mi-cuit et  ses copeaux de truffe noire<span>65€</span></p>
+            <ul>
+                <li>Fricassée d'escargot au piment d'espelete<span>60€</span></li>
+                <li>Oeuf au plat assaisonné à la truffe sur lit de caviar<span>55€</span></li>
+                <li>Foie gras de canard mi-cuit et  ses copeaux de truffe noire<span>65€</span></li>
+            </ul>
         </section>
 
         <section class="plat">
             <div class="plat__header">
-                <img class="separator--left" src="../img/gout-bar.png" alt=""><h2> Oeuvre de maître<span></span></h2><img src="../img/gout-bar.png" alt="">
+                <img class="separator--left" src="../img/gout-bar.png" alt=""><h3>Oeuvre de maître<hr></h3><img src="../img/gout-bar.png" alt="">
             </div>
-            <p>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes<span>70€</span></p>
-            <p>Parmentier de queue de boeuf à la truffe noire sur sa purée de panais<span>85€</span></p>
-            <p>Filet de Turbot aux agrumes<span>125€</span></p>
+            <ul>
+                <li>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes<span>70€</span></li>
+                <li>Parmentier de queue de boeuf à la truffe noire sur sa purée de panais<span>85€</span></li>
+                <li>Filet de Turbot aux agrumes<span>125€</span></li>
+            </ul>
         </section>
 
         <section class="dessert">
             <div class="dessert__header">
-                <img class="separator--left" src="../img/gout-bar.png" alt=""><h2> Au sommet de l'art<span></span></h2><img src="../img/gout-bar.png" alt="">
+                <img class="separator--left" src="../img/gout-bar.png" alt=""><h3> Au sommet de l'art<hr></h3><img src="../img/gout-bar.png" alt="">
             </div>
-            <p>Paris-Brest revisité<span>55€</span></p>
-            <p>Macaron au chocolat d'exception et glace à la vanille de Madagascar<span>65€</span></p>
-            <p>Mousse au chocolat au piment d'espelette et à la truffe noire<span>60€</span></p>
+            <ul>
+                <li>Paris-Brest revisité<span>55€</span></li>
+                <li>Macaron au chocolat d'exception et glace à la vanille de Madagascar<span>65€</span></li>
+                <li>Mousse au chocolat au piment d'espelette et à la truffe noire<span>60€</span></li>
+            </ul>
         </section>
 
     </section>
 
     <footer class="footer">
-        <span class="footer__mentions"><a href="./mentions-legales.html" target="_blank">Mentions légales</a></span>
-        <span class="footer__contact"><a href="mailto:contact@ohmyfood.com">Contactez-nous</a></span>
+        <ul>
+            <li class="footer__mentions"><a href="./mentions-legales.html" target="_blank">Mentions légales</a></li>
+            <li class="footer__contact"><a href="mailto:contact@ohmyfood.com">Contactez-nous</a></li>
+        </ul>
     </footer>
     
 </body>
