--- a/pages/mentions-legales.html
+++ b/pages/mentions-legales.html
@@ -12,12 +12,14 @@
     </header>
 
     <section class="mentions-legales">
-        <h1>Mentions Légales</h1>
+        <h2>Mentions Légales</h2>
     </section>
 
     <footer class="footer">
-        <span class="footer__mentions"><a href="">Mentions légales</a></span>
-        <span class="footer__contact"><a href="mailto:contact@ohmyfood.com">Contactez-nous</a></span>
+        <ul>
+            <li class="footer__mentions"><a href="" target="_blank">Mentions légales</a></li>
+            <li class="footer__contact"><a href="mailto:contact@ohmyfood.com">Contactez-nous</a></li>
+        </ul>
     </footer>
 </body>
 </html>
