changement de class pour les noms de menu

--- a/pages/la-note-enchantee.html
+++ b/pages/la-note-enchantee.html
@@ -13,9 +13,9 @@
 
     <section class="menu-page menu-page__enchantee">
 
-        <header class="menus__enchantee--name">
+        <header>
             <img src="../img/music-logo.png" alt=""><br>
-            <h2>La note enchantée</h2>
+            <h2 class="menus__enchantee--name">La note enchantée</h2>
         </header>
 
         <section class="entree entree--ench">
