--- a/pages/la-palette-du-gout.html
+++ b/pages/la-palette-du-gout.html
@@ -13,8 +13,8 @@
 
     <section class="menu-page menu-page__gout">
 
-        <header class="menus__gout--name">
-            <h2>La palette du goût</h2>
+        <header>
+            <h2 class="menus__gout--name">La palette du goût</h2>
         </header>
 
         <section class="entree">
