--- a/pages/le-chic-a-la-francaise.html
+++ b/pages/le-chic-a-la-francaise.html
@@ -14,8 +14,8 @@
 
         <section class="menu-page menu-page__francaise">
 
-            <header class="menus__francaise--name">
-                <h2>Le chic à la française</h2>
+            <header>
+                <h2 class="menus__francaise--name">Le chic à la française</h2>
             </header>
 
             <section class="entree">
