--- a/pages/le-delice-des-papilles.html
+++ b/pages/le-delice-des-papilles.html
@@ -13,8 +13,8 @@
 
     <section class="menu-page menu-page__papilles">
 
-        <header class="menus__papilles--name">
-            <h2>Le délice des papilles</h2>
+        <header>
+            <h2 class="menus__papilles--name">Le délice des papilles</h2>
         </header>
 
         <section class="entree">
