deplacement balise <hr> dans la page des menus

--- a/pages/la-note-enchantee.html
+++ b/pages/la-note-enchantee.html
@@ -14,13 +14,18 @@
     <section class="menu-page menu-page__enchantee">
 
         <header>
-            <img src="../img/music-logo.png" alt=""><br>
+            <img src="../img/music-logo.png" alt="note-logo"><br>
             <h2 class="menus__enchantee--name">La note enchantée</h2>
         </header>
 
         <section class="entree entree--ench">
             <div class="entree__header">
-                <img class="separator--left" src="../img/ench-left.png" alt=""><h3>Prélude<hr></h3><img src="../img/ench-right.png" alt="">
+                <img class="separator--left" src="../img/ench-left.png" alt="separateur">
+                <div class="entree__header--titre">
+                    <h3>Prélude</h3>
+                    <hr>
+                </div>
+                <img src="../img/ench-right.png" alt="separateur">
             </div>
             <ul>
                 <li>Ravioles de foie gras accompagnés de leur crème à la truffe <span>98€</span></li>
@@ -32,7 +37,12 @@
 
         <section class="plat plat--ench">
             <div class="plat__header">
-                <img class="separator--left" src="../img/ench-left.png" alt=""><h3>Point d'orgue<hr></h3><img src="../img/ench-right.png" alt="">
+                <img class="separator--left" src="../img/ench-left.png" alt="separateur">
+                <div class="plat__header--titre">
+                    <h3>Point d'orgue</h3>
+                    <hr>
+                </div>
+                <img src="../img/ench-right.png" alt="separateur">
             </div>
             <ul>
                 <li>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave<span>102€</span></li>
@@ -43,7 +53,12 @@
 
         <section class="dessert dessert--ench">
             <div class="dessert__header">
-                <img class="separator--left" src="../img/ench-left.png" alt=""><h3> Mouvement final<hr></h3><img src="../img/ench-right.png" alt="">
+                <img class="separator--left" src="../img/ench-left.png" alt="separateur">
+                <div class="dessert__header--titre">
+                    <h3>Mouvement final</h3>
+                    <hr>
+                </div>
+                <img src="../img/ench-right.png" alt="separateur">
             </div>
             <ul>
                 <li>Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</li>
@@ -53,7 +68,7 @@
         </section>
 
         <section class="menu-page__footer">
-            <img src="../img/music-logo.png" alt=""> 
+            <img src="../img/music-logo.png" alt="note-logo"> 
             <span class="menus__enchantee--name">La note enchantée</span>
         </section>
 
