--- a/pages/la-palette-du-gout.html
+++ b/pages/la-palette-du-gout.html
@@ -19,7 +19,12 @@
 
         <section class="entree">
             <div class="entree__header">
-                <img class="separator--left" src="../img/gout-bar.png" alt=""><h3>Esquisse<hr></h3><img src="../img/gout-bar.png" alt="">
+                <img class="separator--left" src="../img/gout-bar.png" alt="separateur">
+                <div class="entree__header--titre">
+                    <h3>Esquisse</h3>
+                    <hr>
+                </div>
+                <img src="../img/gout-bar.png" alt="separateur">
             </div>
             <ul>
                 <li>Fricassée d'escargot au piment d'espelete<span>60€</span></li>
@@ -30,7 +35,13 @@
 
         <section class="plat">
             <div class="plat__header">
-                <img class="separator--left" src="../img/gout-bar.png" alt=""><h3>Oeuvre de maître<hr></h3><img src="../img/gout-bar.png" alt="">
+                <img class="separator--left" src="../img/gout-bar.png" alt="separateur">
+                <div class="plat__header--titre">
+                    <h3>Oeuvre de maître</h3>
+                    <hr>
+                </div>
+                <img src="../img/gout-bar.png" alt="separateur">
+                
             </div>
             <ul>
                 <li>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes<span>70€</span></li>
@@ -41,7 +52,12 @@
 
         <section class="dessert">
             <div class="dessert__header">
-                <img class="separator--left" src="../img/gout-bar.png" alt=""><h3> Au sommet de l'art<hr></h3><img src="../img/gout-bar.png" alt="">
+                <img class="separator--left" src="../img/gout-bar.png" alt="separateur">
+                <div class="dessert__header--titre">
+                    <h3> Au sommet de l'art</h3>
+                    <hr>
+                </div>
+                <img src="../img/gout-bar.png" alt="separateur">
             </div>
             <ul>
                 <li>Paris-Brest revisité<span>55€</span></li>
