--- a/pages/le-chic-a-la-francaise.html
+++ b/pages/le-chic-a-la-francaise.html
@@ -20,7 +20,12 @@
 
             <section class="entree">
                 <div class="entree__header">
-                    <img class="separator--left" src="../img/arrow-1b.png" alt=""><h3>Pour se mettre en appétit<hr></h3><img src="../img/arrow-1b.png" alt="">
+                    <img class="separator--left" src="../img/arrow-1b.png" alt="separateur">
+                    <div class="entree__header--titre">
+                        <h3>Pour se mettre en appétit</h3>
+                        <hr>
+                    </div>
+                    <img src="../img/arrow-1b.png" alt="separateur">
                 </div>
                 <ul>
                     <li>Tartare de poulpe acidulé aux zests d'orange <span>79€</span></li>
@@ -31,7 +36,12 @@
 
             <section class="plat">
                 <div class="plat__header">
-                    <img class="separator--left" src="../img/arrow-2.png" alt=""><h3>Plaisir des papilles<hr></h3><img src="../img/arrow-2.png" alt="">
+                    <img class="separator--left" src="../img/arrow-2.png" alt="separateur">
+                    <div class="plat__header--titre">
+                        <h3>Plaisir des papilles</h3>
+                        <hr>
+                    </div>
+                    <img src="../img/arrow-2.png" alt="separateur">
                 </div>
                 <ul>
                     <li>Coquilles Saint-Jacques accompagnées d'une purée de panais <span>95€</span></li>
@@ -42,7 +52,12 @@
 
             <section class="dessert">
                 <div class="dessert__header">
-                    <img class="separator--left" src="../img/arrow-3.png" alt=""><h3> Gourmandises sucrées<hr></h3><img src="../img/arrow-3.png" alt="">
+                    <img class="separator--left" src="../img/arrow-3.png" alt="separateur">
+                    <div class="dessert__header--titre">
+                        <h3> Gourmandises sucrées</h3>
+                        <hr>
+                    </div>
+                    <img src="../img/arrow-3.png" alt="separateur">
                 </div>
                 <ul>
                     <li>Pétales de violettes glacés et purée de noisettes</li>
