--- a/pages/le-delice-des-papilles.html
+++ b/pages/le-delice-des-papilles.html
@@ -19,7 +19,12 @@
 
         <section class="entree">
             <div class="entree__header">
-                <img class="separator--left" src="../img/papilles-bar-1.png" alt=""><h3>Prélude<hr></h3><img src="../img/papilles-bar-1.png" alt="">
+                <img class="separator--left" src="../img/papilles-bar-1.png" alt="separateur">
+                <div class="entree__header--titre">
+                    <h3>Prélude</h3>
+                    <hr>
+                </div>
+                <img src="../img/papilles-bar-1.png" alt="separateur">
             </div>
             <ul>
                 <li>Tartare de thon assaisonnée au yuzu<span>55€</span></li>
@@ -30,7 +35,12 @@
 
         <section class="plat">
             <div class="plat__header">
-                <img class="separator--left" src="../img/papilles-bar-2.png" alt=""><h3>Point d'orgue<hr></h3><img src="../img/papilles-bar-2.png" alt="">
+                <img class="separator--left" src="../img/papilles-bar-2.png" alt="separateur">
+                <div class="plat__header--titre">
+                    <h3>Point d'orgue</h3>
+                    <hr>
+                </div>
+                <img src="../img/papilles-bar-2.png" alt="separateur">
             </div>
             <ul>
                 <li>Poulet rôti aux herbes de provence et sa crème de truffe<span>110€</span></li>
@@ -41,7 +51,12 @@
 
         <section class="dessert">
             <div class="dessert__header">
-                <img class="separator--left" src="../img/papilles-bar-3.png" alt=""><h3>Mouvement final<hr></h3><img src="../img/papilles-bar-3.png" alt="">
+                <img class="separator--left" src="../img/papilles-bar-3.png" alt="separateur">
+                <div class="dessert__header--titre">
+                    <h3>Mouvement final</h3>
+                    <hr>
+                </div>
+                <img src="../img/papilles-bar-3.png" alt="separateur">
             </div>
             <ul>
                 <li>Farandole de desserts du chef<span>55€</span></li>
