--- a/index.html
+++ b/index.html
@@ -15,28 +15,35 @@
 
     <section class="menus">
         <a class="card card__enchantee" href="./pages/la-note-enchantee.html">
-            <p> <img src="./img/music-logo.png" alt=""><br>
+            <h2> <img src="./img/music-logo.png" alt=""><br>
                 <span class="menus__enchantee--name">La note enchantée</span>
-                <span class="menus__enchantee--menu">Menu</span></p>
+                <span class="menus__enchantee--menu">Menu</span>
+            </h2>
         </a>
         <a class="card card__francaise" href="./pages/le-chic-a-la-francaise.html">
-            <p><span class="menus__francaise--name">Le chic à la Française </span>
-                <span class="menus__francaise--menu">Menu</span></p>
+            <h2>
+                <span class="menus__francaise--name">Le chic à la Française </span>
+                <span class="menus__francaise--menu">Menu</span>
+            </h2>
         </a>
         <a class="card card__papilles" href="./pages/le-delice-des-papilles.html">
-            <p><span class="menus__papilles--name">Le délice des papilles</span>
-                <span class="menus_papilles--menu">Menu</span></p>
+            <h2>
+                <span class="menus__papilles--name">Le délice des papilles</span>
+                <span class="menus__papilles--menu">Menu</span>
+            </h2>
         </a>
         <a class="card card__gout" href="./pages/la-palette-du-gout.html">
-            <p><span class="menus__gout--name">La palette du goût</span>
-                <span class="menus__gout--menu">Menu</span></p>
+            <h2>
+                <span class="menus__gout--name">La palette du goût</span>
+                <span class="menus__gout--menu">Menu</span>
+            </h2>
         </a>
 
     </section>
 
     <section class="soon">
-        <h2 class="soon__title">Prochainement <span class="soon__dot soon__dot--1">.</span><span
-                class="soon__dot soon__dot--2">.</span><span class="soon__dot soon__dot--3">.</span></h2>
+        <h3 class="soon__title">Prochainement <span class="soon__dot soon__dot--1">.</span><span
+                class="soon__dot soon__dot--2">.</span><span class="soon__dot soon__dot--3">.</span></h3>
     </section>
 
     <footer class="footer">
